# RustyBot

./: Cargo.toml  README.md
src/: main.rs
src/commands/: fun.rs  math.rs  meta.rs  mod.rs  owner.rs
