[package]
name = "bot"
version = "0.1.0"
authors = ["Andrew Todd <andrew123ast@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
rand = "0.8.3"
tracing-subscriber = "0.2"
meval = "0.2"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
version = "0.10.2"
features = ["cache", "framework", "standard_framework", "rustls_backend"]